# ESTIEM-eda

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml  requirements.txt  run_tests.py  setup.py  simple_branding_test.py  simple_test.py  simple_test_mcp.py  test_branding.py  test_comprehensive_unicode.py  test_core_engine.py  test_enhanced_mcp.py  test_mcp_protocol.py  test_protocol_simple.py  test_simple.py  test_simplified_mcp.py
.github/workflows/: ci.yml  deploy-web.yml  release.yml
archive/: README.md
archive/webapp/: base.py  capability.py  probability_plot.py
archive/webapp/docs/: BROWSER_COMPATIBILITY.md  README.md  TECHNICAL_ARCHITECTURE.md  app.js  eda_tools.py
docs/: API_SPECIFICATION.md  BROWSER_COMPATIBILITY.md  ENHANCED_MCP_VISUALIZATION_PLAN.md  README.md  TECHNICAL_ARCHITECTURE.md  _headers  app.js  eda_tools.py  index.html  netlify.toml  style.css
examples/: README.md  claude_desktop_config.json  manufacturing_data.csv  quick_analysis_examples.py  six_sigma_examples.py  statistical_analysis_examples.py
notebooks/: ESTIEM_EDA_Quick_Start.ipynb  README.md
src/estiem_eda/: __init__.py  cli.py  mcp_server.py  quick_analysis.py
src/estiem_eda/browser/: README.md  __init__.py
src/estiem_eda/core/: __init__.py  calculations.py  validation.py
src/estiem_eda/tools/: __init__.py  anova.py  base.py  capability.py  enhanced_base.py  i_chart.py  pareto.py  probability_plot.py  process_analysis.py  simplified_base.py
src/estiem_eda/utils/: __init__.py  branding.py  format_generators.py  simplified_visualization.py  visualization.py  visualization_response.py
tests/: __init__.py  conftest.py  test_anova.py  test_capability.py  test_i_chart.py  test_mcp_server.py  test_pareto.py  test_probability_plot.py
